# dograpper

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/adr/: 0005-sessao-autonoma-resolucao-backlog.md
docs/discovery/: brainstorm-features-2026-07.md
docs/superpowers/plans/: 2026-07-05-roadmap-issues-abertas.md  2026-07-08-issue-11-eval-harness.md
src/dograpper/lib/: ignore_parser.py  wget_mirror.py
tests/: test_download.py  test_pack.py
