[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dograpper"
version = "0.3.3"
description = "Context engineering pipeline for deterministic LLM ingestion"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pathspec>=1.0.4",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
headless = ["playwright>=1.58.0,<1.62.0"]
build = ["pyinstaller>=6.0"]
dev = [
    "pytest>=7.0",
]

[project.scripts]
dograpper = "dograpper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
